--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
 		"@electron-toolkit/preload": "^3.0.2",
 		"@electron-toolkit/typed-ipc": "^1.0.2",
 		"@electron-toolkit/utils": "^4.0.0",
+		"electron-timber": "^1.0.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0"
 	},
 	"devDependencies": {
 		"@electron-toolkit/eslint-config-ts": "^3.1.0",
 		"@electron-toolkit/tsconfig": "^1.0.1",
-		"@types/node": "^22.15.16",
+		"@types/node": "^22.15.17",
 		"@types/react": "^19.1.3",
 		"@types/react-dom": "^19.1.3",
 		"@vitejs/plugin-react": "^4.4.1",
