--- a/package.json
+++ b/package.json
@@ -1,48 +1,48 @@
 {
-  "name": "electron-typed-ipc-poc",
-  "version": "1.0.0",
-  "description": "An Electron application with React, TypeScript, and Electron Toolkit Typed IPC",
-  "main": "./out/main/index.js",
-  "type": "module",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
-  "scripts": {
-    "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
-    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
-    "typecheck": "bun run typecheck:node && bun run typecheck:web",
-    "clean": "rimraf out",
-    "start": "electron-vite preview",
-    "dev": "electron-vite dev",
-    "format": "deno fmt",
-    "build": "bun run typecheck && electron-vite build",
-    "postinstall": "electron-builder install-app-deps",
-    "build:unpack": "bun run build && electron-builder --dir",
-    "build:win": "bun run build && electron-builder --win",
-    "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build && electron-builder --linux",
-    "tree": "tree -I 'node_modules|dist|build|out|release|ai|assets' | pbcopy"
-  },
-  "dependencies": {
-    "@electron-toolkit/preload": "^3.0.2",
-    "@electron-toolkit/typed-ipc": "^1.0.2",
-    "@electron-toolkit/utils": "^4.0.0",
-    "electron-timber": "^1.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  },
-  "devDependencies": {
-    "@electron-toolkit/eslint-config-ts": "^3.1.0",
-    "@electron-toolkit/tsconfig": "^1.0.1",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
-    "@vitejs/plugin-react": "^4.4.1",
-    "electron": "^36.2.0",
-    "electron-builder": "^26.0.12",
-    "electron-vite": "^3.1.0",
-    "lefthook": "^1.11.12",
-    "rimraf": "^6.0.1",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5"
-  }
+	"name": "electron-typed-ipc-poc",
+	"version": "1.0.0",
+	"description": "An Electron application with React, TypeScript, and Electron Toolkit Typed IPC",
+	"main": "./out/main/index.js",
+	"type": "module",
+	"author": "example.com",
+	"homepage": "https://electron-vite.org",
+	"scripts": {
+		"typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
+		"typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
+		"typecheck": "bun run typecheck:node && bun run typecheck:web",
+		"clean": "rimraf out",
+		"start": "electron-vite preview",
+		"dev": "electron-vite dev",
+		"format": "deno fmt",
+		"build": "bun run typecheck && electron-vite build",
+		"postinstall": "electron-builder install-app-deps",
+		"build:unpack": "bun run build && electron-builder --dir",
+		"build:win": "bun run build && electron-builder --win",
+		"build:mac": "electron-vite build && electron-builder --mac",
+		"build:linux": "electron-vite build && electron-builder --linux",
+		"tree": "tree -I 'node_modules|dist|build|out|release|ai|assets' | pbcopy"
+	},
+	"dependencies": {
+		"@electron-toolkit/preload": "^3.0.2",
+		"@electron-toolkit/typed-ipc": "^1.0.2",
+		"@electron-toolkit/utils": "^4.0.0",
+		"electron-log": "^5.4.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0"
+	},
+	"devDependencies": {
+		"@electron-toolkit/eslint-config-ts": "^3.1.0",
+		"@electron-toolkit/tsconfig": "^1.0.1",
+		"@types/node": "^22.15.17",
+		"@types/react": "^19.1.3",
+		"@types/react-dom": "^19.1.3",
+		"@vitejs/plugin-react": "^4.4.1",
+		"electron": "^36.2.0",
+		"electron-builder": "^26.0.12",
+		"electron-vite": "^3.1.0",
+		"lefthook": "^1.11.12",
+		"rimraf": "^6.0.1",
+		"typescript": "^5.8.3",
+		"vite": "^6.3.5"
+	}
 }
